# HydrakonV1

./: .gitignore  README.md
ZED2i/: vcone.py
src/fs_camera/: README.md  package.xml  setup.cfg  setup.py
src/fs_camera/fs_camera/: camera_detection_node.py
src/fs_control/: package.xml  setup.py
src/fs_control/config/: pid_params.yaml
src/fs_control/fs_control/: pid_controller_node.py  vehicle_interface_node.py
src/fs_control/launch/: control_system.launch.py
src/fs_launch/: package.xml  setup.cfg  setup.py
src/fs_launch/launch/: hydrakon_launch.py
src/fs_lidar/: README.md  package.xml  setup.cfg  setup.py
src/fs_lidar/fs_lidar/: lidar_cluster.py
src/fs_planning/: package.xml  setup.cfg  setup.py
src/fs_planning/fs_planning/: hydrakon_planning copy.py  hydrakon_planning.py  nmea_bridge copy.py  nmea_bridge.py
src/hydrakon_can/: CMakeLists.txt
src/hydrakon_can/include/hydrakon_can/: hydrakon_can.hpp
src/hydrakon_can/include/hydrakon_can/FS-AI_API/FS-AI_API/: fs-ai_api.c
src/hydrakon_can/launch/: hydrakon_can_launch.py
src/hydrakon_can/src/: hydrakon_can.cpp
